Image overflow fix on developer page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,6 +217,7 @@ nav .icon-burger .line {
   flex-direction:row;
   margin-top: 50px;
   margin-bottom: 50px;
+  overflow: hidden; 
 }
 
 .portfolio-container-row {
@@ -225,6 +226,7 @@ nav .icon-burger .line {
   position: relative;
   margin-top: 50px;
   margin-bottom: 50px;
+  overflow: hidden; 
 }
 
 .dev-info {
@@ -240,12 +242,14 @@ nav .icon-burger .line {
   margin-top: 10px;
   padding: 10px;
   border-radius: 25px;
-  transition: transform .2s;
   width: 100%;
+  transition: transform .4s;
 }
 
 .dev-info:hover {
   transform: scale(1.1);
+  transform-origin: 50% 50%;
+
 }
 
 .dev-info h1 {
